kubernetes/web-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monet-app
  labels:
    name: monet-app
